Add link to supplemental notebook.

--- a/_notebooks/2021-10-23-gradient-boosting-machine-with-any-loss-function.ipynb
+++ b/_notebooks/2021-10-23-gradient-boosting-machine-with-any-loss-function.ipynb
@@ -98,7 +98,8 @@
     "## Implementation\n",
     "I did some half-assed searching on the interweb for an implementation of GBM that allows the user to provide a custom loss function, and you know what? I couldn't find anything. If you find another implementation, post in the comments so we can learn from it too.\n",
     "\n",
-    "Since we need to rip open the decision trees and modify the values predicted by their terminal nodes, we'll want to brush up on the scikit-learn [decision tree structure](https://scikit-learn.org/stable/auto_examples/tree/plot_unveil_tree_structure.html) before we get going. Here's the notebook where I figured out  all the sklearn decision tree hacks and modifications that we'll use to reassign the values predicted in the leaf nodes; it also includes the GBM implementation, which turned out as follows."
+    "Since we need to rip open the decision trees and modify the values predicted by their terminal nodes, we'll want to brush up on the scikit-learn [decision tree structure](https://scikit-learn.org/stable/auto_examples/tree/plot_unveil_tree_structure.html) before we get going. \n",
+    "You can see explanations of all the necessary decision tree hacks in this [notebook](https://github.com/mcb00/blog/blob/master/supplemental/freedman-gbm-implementation.ipynb)."
    ]
   },
   {
