Update post tags.

--- a/_notebooks/2020-11-25-8020-pandas-tutorial.ipynb
+++ b/_notebooks/2020-11-25-8020-pandas-tutorial.ipynb
@@ -10,7 +10,7 @@
     "- toc: false\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [pandas, tidyverse]\n",
+    "- categories: [pandas]\n",
     "- hide: false\n",
     "- image: images/80_20_pandas.png"
    ]
