--- a/_notebooks/2021-01-22-get-down-with-gradient-descent.ipynb
+++ b/_notebooks/2021-01-22-get-down-with-gradient-descent.ipynb
@@ -10,6 +10,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- hide: false\n",
+    "- categories: [gradient boosting]\n",
     "- image: images/gd_get_down.png"
    ]
   },
