--- a/_notebooks/2021-04-27-how-gradient-boosting-does-gradient-descent.ipynb
+++ b/_notebooks/2021-04-27-how-gradient-boosting-does-gradient-descent.ipynb
@@ -11,6 +11,7 @@
     "- badges: false\n",
     "- comments: true\n",
     "- hide: false\n",
+    "- categories: [gradient boosting]\n",
     "- image: images/gb_gd.jpg"
    ]
   },
