--- a/_notebooks/2021-06-22-hello-pyspark.ipynb
+++ b/_notebooks/2021-06-22-hello-pyspark.ipynb
@@ -11,6 +11,7 @@
     "- hide: false\n",
     "- toc: flase\n",
     "- comments: true\n",
+    "- categories: [PySpark]\n",
     "- image: images/guiones_wave.jpeg\n"
    ]
   },
@@ -906,7 +907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
