Iterate on freedman gbm post.

--- a/_notebooks/2021-10-23-gradient-boosting-machine-with-any-loss-function.ipynb
+++ b/_notebooks/2021-10-23-gradient-boosting-machine-with-any-loss-function.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# How to Implement a Gradient Boosting Machine that Works with Any Loss Function\n",
     "\n",
-    "> Implement Freedman's original gradient boosting algorithm and train models with any loss function.\n",
+    "> Summarize Freedman's seminal GBM paper and implement the generic gradient boosting algorithm to train models with any differentiable loss function.\n",
     "\n",
     "- toc: false\n",
     "- badges: true\n",
@@ -27,21 +27,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Well I've been alluding to this capability for several posts now, so it's time we get down to business and look at how Freedman's original GBM treated custom loss functions. This will help us complete our understanding of the original GBM algorithm, and it will help us begin to appreciate why, in practical situations, we will almost always be better off using variants like XGBoost or LightGBM, especially when we want to use custom losses. We'll see more on these state-of-the-art boosting algos in future posts."
+    "Friends, this is going to be an epic post! Today, we bring together all the ideas we've built up over the past few posts to nail down our understanding of the key ideas in Jerome Freedman's seminal 2001 paper: \"[Greedy Function Approximation: A Gradient Boosting Machine](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf).\"\n",
+    "In particular, we'll summarize the highlights from the paper, and we'll build an in-house python implementation of his generic gradient boosting algorithm which can train with any differentiable loss function.\n",
+    "What's more, we'll go ahead and take our generic gradient boosting machine for a spin by training it with several of the most popular loss functions used in practice.\n",
+    "\n",
+    "Are you freaking stoked or what?\n",
+    "\n",
+    "Sweet. Let's do this.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Freedman's GBM Algorithm \n",
-    "In a previous post I outlined a general algorithm for gradient boosting with an arbitrary loss function, but it was presented to serve our intuition and was therefore a little bit hand-wavy. \n",
-    "This time let's get specific enough to implement it in code. \n",
-    "We'll use Freedman's original gradient boost algorithm from page 5 of [the paper](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf) (translated into the notation we've been using so far). \n",
+    "## Summary of the Paper\n",
+    "\n",
+    "FIrst of all, I encourage you to pick up [the paper](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf) and read it yourself. Like many papers, there is a lot of scary looking math in the first few pages, but if you've been following along on  this blog, you'll find that it's actually totally approachable. \n",
+    "This is the kind of thing that cures imposter syndrome, so give it a shot.\n",
+    "Following are the highlights as I see them.\n",
+    "\n",
+    "The first section is just an introduction about function approximation, of which supervised learning is a special case. Section 2 casually introduces the idea of doing gradient descent in function space, an idea we spent [an entire post](https://blog.mattbowers.dev/how-gradient-boosting-does-gradient-descent) demystifying earlier.\n",
+    "Section 3 introduces the idea of performing gradient descent in function space by using additive models constructed via  greedy  stagewise iteration (a.k.a. boosting).\n",
+    "We also arrive at algorithm 1, gradient boost, the generic gradient boosting machine that works with any differentiable loss function.\n",
+    "\n",
+    "In Section 4, Freedman goes on to detail several special cases of the gradient boost algorithm, corresponding to the use of different loss functions including least squares, least absolute deviations, Huber loss, and negative binomial log likelihood. He also presents a variation for multi-class classification, and he proposes a way to optimize the gradient boost algorithm when the weak learners are decision trees (more on that enhancement in the next section). \n",
+    "\n",
+    "In section 5 he proposes the \"learning rate\" parameter which is used for regularization; we already discussed this in the [first GBM post](https://blog.mattbowers.dev/gradient-boosting-machine-from-scratch). Section 6 provides simulation-based performance metrics for his gradient boost variants with benchmarks against other contemporary models. \n",
+    "\n",
+    "Section 7 discusses the optimal size of the base learner decision trees to use for boosting. The key insight is that the size of the trees dictates the highest order interaction among features that can be captured, i.e., trees with shallow depth can only represent low-order interactions.\n",
+    "Freedman's suggestion is to choose the tree depth by using hyperparameter search with a validation dataset.\n",
+    "\n",
+    "Section 8 explores model interpretability via feature importance and partial dependence plots. I think it's slightly ironic that interpretability is addressed in the original gradient boosting paper, and yet, 20 years later I still hear people say that these models are uninterpretable black boxes.\n",
+    "Section 9 applies gradient boosting models to two real datasets: classification on geological data and regression on demographic  survey data.\n",
+    "\n",
+    "Freedman concludes in Section 10  by musing about the advantages of gradient boosting with trees.\n",
+    "He notes some key advantages afforded by the use of decision trees including no need to rescale input data, robustness against irrelevant input features, and elegant handling of missing feature values.\n",
+    "He notes that gradient boosting manages to capitalize on the benefits of decision trees while minimizing their key weakness (crappy accuracy)\n",
+    "These claims have been corroborated over the last 20 years  by the widespread adoption and success of gradient boosting trees and their modern descendants  in practical machine learning applications.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Freedman's Generic Gradient Boosting Algorithm \n",
+    "Let's take a closer look at  Freedman's original gradient boost algorithm from Section 3 of [the paper](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf) (translated into the notation we've been using so far). \n",
     "\n",
     "Like last time, we have training data $(\\mathbf{y}, \\mathbf{X})$ where $\\mathbf{y}$ is a length-$n$ vector of target values, and $\\mathbf{X}$ is an $n \\times p$ matrix with $n$ observations of $p$ features. We also have a differentiable loss function $L(\\mathbf{y}, \\mathbf{\\hat{y}}) = \\sum_{i=1}^n l(y_i, \\hat{y}_i)$, a \"learning rate\" hyperparameter $\\eta$, and a fixed number of model iterations $M$.\n",
     "\n",
-    "**Algorithm** *gradient_boost*$(\\mathbf{X},\\mathbf{y},L,\\eta, M)$ returns: model $F_M$\n",
+    "**Algorithm:** *gradient_boost*$(\\mathbf{X},\\mathbf{y},L,\\eta, M)$ returns: model $F_M$\n",
     "\n",
     "1. Let base model\n",
     "$F_0(\\mathbf{x}) = c$, where $c = \\text{argmin}_{c} \\sum_{i=1}^n l(y_i, c)$\n",
@@ -96,10 +130,11 @@
    "metadata": {},
    "source": [
     "## Implementation\n",
-    "I did some half-assed searching on the interweb for an implementation of GBM that allows the user to provide a custom loss function, and you know what? I couldn't find anything. If you find another implementation, post in the comments so we can learn from it too.\n",
+    "\n",
+    "I did some (half-assed) searching on the interweb for an implementation of GBM that allows the user to provide a custom loss function, and you know what? I couldn't find anything. If you find another implementation, post in the comments so we can learn from it too.\n",
     "\n",
     "Since we need to rip open the decision trees and modify the values predicted by their terminal nodes, we'll want to brush up on the scikit-learn [decision tree structure](https://scikit-learn.org/stable/auto_examples/tree/plot_unveil_tree_structure.html) before we get going. \n",
-    "You can see explanations of all the necessary decision tree hacks in this [notebook](https://github.com/mcb00/blog/blob/master/supplemental/freedman-gbm-implementation.ipynb)."
+    "You can see explanations of all the necessary decision tree hacks in this [notebook](https://github.com/mcb00/blog/blob/master/supplemental/freedman-gbm-implementation.ipynb).\n"
    ]
   },
   {
@@ -211,7 +246,7 @@
    "metadata": {},
    "source": [
     "### Mean Squared Error\n",
-    "MSE loss produces estimates of the mean target value conditioned on the feature values. Here's the implementation."
+    "Mean Squared Error (a.k.a. Least Squares)  loss produces estimates of the mean target value conditioned on the feature values. Here's the implementation."
    ]
   },
   {
@@ -311,7 +346,7 @@
    "metadata": {},
    "source": [
     "### Mean Absolute Error\n",
-    "MAE loss produces estimates of the median target value conditioned on the feature values. Here's the implementation."
+    "Mean Absolute Error (a.k.a.Least Absolute Deviations) loss produces estimates of the median target value conditioned on the feature values. Here's the implementation."
    ]
   },
   {
@@ -398,7 +433,7 @@
    "metadata": {},
    "source": [
     "### Quantile Loss\n",
-    "Quantile loss yields estimates of a given quantile of the target variable conditioned on the features. Here's the implementation."
+    "Quantile loss yields estimates of a given quantile of the target variable conditioned on the features. Here's my implementation."
    ]
   },
   {
@@ -497,8 +532,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Binary Cross Entropy\n",
-    "All the previous losses were for regression problems. But we can also do classification, simply by using the right loss function. Here we'll implement binary cross entropy, a.k.a. binary deviance, sometimes abusively called log loss. One thing to remember is that, like logistic regression, our model is really predicting the log odds ratio, not the probability of the positive class. Thus I do an expit transformation before computing loss and the gradients and another one before plotting the predictions."
+    "### Binary Cross Entropy Loss\n",
+    "The previous losses are useful for regression problems, where the target is numeric. But we can also solve classification problems, simply by swapping in an appropriate loss function. Here we'll implement binary cross entropy, a.k.a. binary deviance, a.k.a. negative binomial log likelihood (sometimes abusively called log loss). One thing to remember is that, as with logistic regression, our model is actually  predicting the log odds ratio, not the probability of the positive class. Thus we use expit transformations (the inverse of logit) whenever probabilities are needed, e.g., when predicting the probability that an observation belongs to the positive class. "
    ]
   },
   {
@@ -596,7 +631,18 @@
    "metadata": {},
    "source": [
     "## Wrapping Up\n",
-    "Alrighty, there it is, an implementation of the gradient boosting machine that can handle whatever loss function your heart desires (as long as you can write down its derivative). This one was really fun to implement since it solidifies a lot of the (sometimes mathy) ideas we've been covering about gradient boosting, and it removes any remaining doubt about the gradient boost algorithm from Freedman's classic paper. As I mentioned in the intro, in real life we will more or less always be better off using modern boosting frameworks like XGBoost, rather than the classic GBM. And as luck would have it, we'll dive into the details of these modern Newton descent boosting frameworks in future posts.\n"
+    "Woohoo! We did it! We finally made it through Freedman's paper in its entirety, and we implemented the generic gradient boosting algorithm which works with any differentiable loss function.\n",
+    "If you made it this far, great job, gold star!\n",
+    "By now you hopefully have a pretty solid grasp on  gradient boosting, which is good, because next we're going to dive into the modern Newton descent gradient boosting frameworks like LightGBM and XGBoost.\n",
+    "Can't wait; see you there!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "Freedman's 2001 paper: [Greedy Function Approximation: A Gradient Boosting Machine](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf)"
    ]
   },
   {
