Correct the spelling of J Friedman's name in a zilion places.

--- a/_notebooks/2021-10-23-gradient-boosting-machine-with-any-loss-function.ipynb
+++ b/_notebooks/2021-10-23-gradient-boosting-machine-with-any-loss-function.ipynb
@@ -6,28 +6,28 @@
    "source": [
     "# How to Implement a Gradient Boosting Machine that Works with Any Loss Function\n",
     "\n",
-    "> Summarize Freedman's seminal GBM paper and implement the generic gradient boosting algorithm to train models with any differentiable loss function.\n",
+    "> Summarize Friedman's seminal GBM paper and implement the generic gradient boosting algorithm to train models with any differentiable loss function.\n",
     "\n",
     "- toc: false\n",
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [gradient boosting]\n",
     "- hide: false\n",
-    "- image: images/freedman_waterfall.jpg\n"
+    "- image: images/friedman_waterfall.jpg\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](nb_images/freedman_waterfall.jpg \"Cold water cascades over the rocks in Erwin, Tennessee.\")"
+    "![](nb_images/friedman_waterfall.jpg \"Cold water cascades over the rocks in Erwin, Tennessee.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Friends, this is going to be an epic post! Today, we bring together all the ideas we've built up over the past few posts to nail down our understanding of the key ideas in Jerome Freedman's seminal 2001 paper: \"[Greedy Function Approximation: A Gradient Boosting Machine](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf).\"\n",
+    "Friends, this is going to be an epic post! Today, we bring together all the ideas we've built up over the past few posts to nail down our understanding of the key ideas in Jerome Friedman's seminal 2001 paper: \"[Greedy Function Approximation: A Gradient Boosting Machine](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf).\"\n",
     "In particular, we'll summarize the highlights from the paper, and we'll build an in-house python implementation of his generic gradient boosting algorithm which can train with any differentiable loss function.\n",
     "What's more, we'll go ahead and take our generic gradient boosting machine for a spin by training it with several of the most popular loss functions used in practice.\n",
     "\n",
@@ -40,38 +40,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Summary of the Paper\n",
+    "## Friedman 2001: TL;DR\n",
     "\n",
-    "FIrst of all, I encourage you to pick up [the paper](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf) and read it yourself. Like many papers, there is a lot of scary looking math in the first few pages, but if you've been following along on  this blog, you'll find that it's actually totally approachable. \n",
+    "I've mentioned this paper a couple of times before, but as far as I can tell, this is the origin of gradient boosting; it is therefore, a seminal work worth reading.\n",
+    "You know what, I think you might like to pick up [the paper](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf) and read it yourself. Like many papers, there is a lot of scary looking math in the first few pages, but if you've been following along on  this blog, you'll find that it's actually totally approachable. \n",
     "This is the kind of thing that cures imposter syndrome, so give it a shot.\n",
-    "Following are the highlights as I see them.\n",
+    "That said, here's the TL;DR as I see it.\n",
     "\n",
-    "The first section is just an introduction about function approximation, of which supervised learning is a special case. Section 2 casually introduces the idea of doing gradient descent in function space, an idea we spent [an entire post](https://blog.mattbowers.dev/how-gradient-boosting-does-gradient-descent) demystifying earlier.\n",
-    "Section 3 introduces the idea of performing gradient descent in function space by using additive models constructed via  greedy  stagewise iteration (a.k.a. boosting).\n",
-    "We also arrive at algorithm 1, gradient boost, the generic gradient boosting machine that works with any differentiable loss function.\n",
     "\n",
-    "In Section 4, Freedman goes on to detail several special cases of the gradient boost algorithm, corresponding to the use of different loss functions including least squares, least absolute deviations, Huber loss, and negative binomial log likelihood. He also presents a variation for multi-class classification, and he proposes a way to optimize the gradient boost algorithm when the weak learners are decision trees (more on that enhancement in the next section). \n",
+    "The first part of the paper introduces the idea of fitting models by doing gradient descent in function space, an ingenious idea we spent  [an entire post](https://blog.mattbowers.dev/how-gradient-boosting-does-gradient-descent) demystifying earlier.\n",
+    "Friedman goes on to introduce the generic gradient boost algorithm, which works with any differentiable loss function, as well as specific variants for minimizing absolute error, Huber loss, and binary deviance.\n",
+    "In terms of hyperparameters, he points out that the learning rate can be used to reduce overfitting, while increased tree depth can help capture more complex interactions among features.\n",
+    "He even discusses feature importance and partial dependence methods for interpreting fitted gradient boosting models.\n",
     "\n",
-    "In section 5 he proposes the \"learning rate\" parameter which is used for regularization; we already discussed this in the [first GBM post](https://blog.mattbowers.dev/gradient-boosting-machine-from-scratch). Section 6 provides simulation-based performance metrics for his gradient boost variants with benchmarks against other contemporary models. \n",
-    "\n",
-    "Section 7 discusses the optimal size of the base learner decision trees to use for boosting. The key insight is that the size of the trees dictates the highest order interaction among features that can be captured, i.e., trees with shallow depth can only represent low-order interactions.\n",
-    "Freedman's suggestion is to choose the tree depth by using hyperparameter search with a validation dataset.\n",
-    "\n",
-    "Section 8 explores model interpretability via feature importance and partial dependence plots. I think it's slightly ironic that interpretability is addressed in the original gradient boosting paper, and yet, 20 years later I still hear people say that these models are uninterpretable black boxes.\n",
-    "Section 9 applies gradient boosting models to two real datasets: classification on geological data and regression on demographic  survey data.\n",
-    "\n",
-    "Freedman concludes in Section 10  by musing about the advantages of gradient boosting with trees.\n",
+    "Friedman concludes by musing about the advantages of gradient boosting with trees.\n",
     "He notes some key advantages afforded by the use of decision trees including no need to rescale input data, robustness against irrelevant input features, and elegant handling of missing feature values.\n",
-    "He notes that gradient boosting manages to capitalize on the benefits of decision trees while minimizing their key weakness (crappy accuracy)\n",
-    "These claims have been corroborated over the last 20 years  by the widespread adoption and success of gradient boosting trees and their modern descendants  in practical machine learning applications.\n"
+    "He points out that gradient boosting manages to capitalize on the benefits of decision trees while minimizing their key weakness (crappy accuracy). \n",
+    "I think this offers a great insight into why gradient boosting models have become so widespread and successful in practical ML applications.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Freedman's Generic Gradient Boosting Algorithm \n",
-    "Let's take a closer look at  Freedman's original gradient boost algorithm from Section 3 of [the paper](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf) (translated into the notation we've been using so far). \n",
+    "## Friedman's Generic Gradient Boosting Algorithm \n",
+    "Let's take a closer look at  Friedman's original gradient boost algorithm, Alg. 1 in Section 3 of [the paper](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf) (translated into the notation we've been using so far). \n",
     "\n",
     "Like last time, we have training data $(\\mathbf{y}, \\mathbf{X})$ where $\\mathbf{y}$ is a length-$n$ vector of target values, and $\\mathbf{X}$ is an $n \\times p$ matrix with $n$ observations of $p$ features. We also have a differentiable loss function $L(\\mathbf{y}, \\mathbf{\\hat{y}}) = \\sum_{i=1}^n l(y_i, \\hat{y}_i)$, a \"learning rate\" hyperparameter $\\eta$, and a fixed number of model iterations $M$.\n",
     "\n",
@@ -133,8 +126,8 @@
     "\n",
     "I did some (half-assed) searching on the interweb for an implementation of GBM that allows the user to provide a custom loss function, and you know what? I couldn't find anything. If you find another implementation, post in the comments so we can learn from it too.\n",
     "\n",
-    "Since we need to rip open the decision trees and modify the values predicted by their terminal nodes, we'll want to brush up on the scikit-learn [decision tree structure](https://scikit-learn.org/stable/auto_examples/tree/plot_unveil_tree_structure.html) before we get going. \n",
-    "You can see explanations of all the necessary decision tree hacks in this [notebook](https://github.com/mcb00/blog/blob/master/supplemental/freedman-gbm-implementation.ipynb).\n"
+    "Since we need to modify the values predicted by our decision trees' terminal nodes, we'll want to brush up on the scikit-learn [decision tree structure](https://scikit-learn.org/stable/auto_examples/tree/plot_unveil_tree_structure.html) before we get going. \n",
+    "You can see explanations of all the necessary decision tree hacks in this [notebook](https://github.com/mcb00/blog/blob/master/supplemental/friedman-gbm-implementation.ipynb).\n"
    ]
   },
   {
@@ -234,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In terms of design, we implement a class for the GBM with scikit-like `fit` and `predict` methods. Notice in the above implementation that the `fit` method is only 10 lines long, and corresponds very closely to Freedman's algorithm from above.  Most of the complexity comes from the helper methods for updating the leaf values according to the specified loss function.\n",
+    "In terms of design, we implement a class for the GBM with scikit-like `fit` and `predict` methods. Notice in the below implementation that the `fit` method is only 10 lines long, and corresponds very closely to Friedman's gradient boost algorithm from above.  Most of the complexity comes from the helper methods for updating the leaf values according to the specified loss function.\n",
     "\n",
     "When the user wants to call the `fit` method, they'll need to supply the loss function they want to use for boosting. We'll make the user implement their loss (a.k.a. objective) function as a class with two methods: (1) a `loss` method taking the labels and the predictions and returning the loss score and (2) a `negative_gradient` method taking the labels and the predictions and returning an array of negative gradients.\n"
    ]
@@ -764,10 +757,10 @@
    "metadata": {},
    "source": [
     "## Wrapping Up\n",
-    "Woohoo! We did it! We finally made it through Freedman's paper in its entirety, and we implemented the generic gradient boosting algorithm which works with any differentiable loss function.\n",
+    "Woohoo! We did it! We finally made it through Friedman's paper in its entirety, and we implemented the generic gradient boosting algorithm which works with any differentiable loss function.\n",
     "If you made it this far, great job, gold star!\n",
     "By now you hopefully have a pretty solid grasp on  gradient boosting, which is good, because next we're going to dive into the modern Newton descent gradient boosting frameworks like XGBoost.\n",
-    "Can't wait; see you there!\n"
+    "Onward!\n"
    ]
   },
   {
@@ -775,7 +768,7 @@
    "metadata": {},
    "source": [
     "## References\n",
-    "Freedman's 2001 paper: [Greedy Function Approximation: A Gradient Boosting Machine](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf)"
+    "Friedman's 2001 paper: [Greedy Function Approximation: A Gradient Boosting Machine](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf)"
    ]
   },
   {
@@ -802,7 +795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
