--- a/supplemental/friedman-gbm-implementation.ipynb
+++ b/supplemental/friedman-gbm-implementation.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Implementation of Freedman's GBM with Custom Objective"
+    "# Implementation of Friedman's GBM with Custom Objective"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, I figure out the hacks needed to implement Freedman's original GBM algorithm using sklearn DecisionTreeRegressor as the weak learner and scipy minimize as the argmin method.\n",
+    "In this notebook, I figure out the hacks needed to implement Friedman's original GBM algorithm using sklearn DecisionTreeRegressor as the weak learner and scipy minimize as the argmin method.\n",
     "Basically we just need to be able to modify the tree predictions to predict the best prediction value according to the argmin of the loss function.\n",
     "This page on the [decision tree structure](https://scikit-learn.org/stable/auto_examples/tree/plot_unveil_tree_structure.html)  in the sklearn documentation is super helpful."
    ]
