--- a/_notebooks/2021-12-12-consider-the-decision-tree.ipynb
+++ b/_notebooks/2021-12-12-consider-the-decision-tree.ipynb
@@ -60,7 +60,7 @@
     "## A Regression Tree in Action\n",
     "Let's have a closer look at regression trees by  training one on the diabetes dataset from scikit learn. According to the [documentation](https://scikit-learn.org/stable/datasets/toy_dataset.html#diabetes-dataset):\n",
     "\n",
-    ">> Ten baseline variables, age, sex, body mass index, average blood pressure, and six blood serum measurements were obtained for each of n = 442 diabetes patients, as well as the response of interest, a quantitative measure of disease progression one year after baseline.\n",
+    "> Ten baseline variables, age, sex, body mass index, average blood pressure, and six blood serum measurements were obtained for each of n = 442 diabetes patients, as well as the response of interest, a quantitative measure of disease progression one year after baseline.\n",
     "\n",
     "First we load the data. To make our lives easier, we'll just use two features: average blood pressure  (bp) and the first blood serum measurement (s1) to predict the target. I'll also rescale the features (to make their values easier for me to read and type). Rescaling features won't affect our tree--one of the reasons trees are awesome (more on that later). \n"
    ]
