--- a/_notebooks/2021-12-13-decision-tree-from-scratch.ipynb
+++ b/_notebooks/2021-12-13-decision-tree-from-scratch.ipynb
@@ -312,9 +312,7 @@
     "The reduction in loss from this split is\n",
     "\n",
     "$$ \\Delta L = L_{\\text{after split}} -  L_{\\text{before split}} = (L_L + L_R) - L $$\n",
-    "$$  = \\sum_{i \\in I_L} y_i^2 - \\frac{1}{n_L} \\left ( \\sum_{i \\in I_L} y_i \\right )^2 \n",
-    "+ \\sum_{i \\in I_R} y_i^2 - \\frac{1}{n_R} \\left ( \\sum_{i \\in I_R} y_i \\right )^2\n",
-    "- \\left ( \\sum_{i \\in I} y_i^2 - \\frac{1}{n} \\left ( \\sum_{i \\in I} y_i \\right )^2 \\right ) $$\n",
+    "$$  = \\sum_{i \\in I_L} y_i^2 - \\frac{1}{n_L} \\left ( \\sum_{i \\in I_L} y_i \\right )^2 + \\sum_{i \\in I_R} y_i^2 - \\frac{1}{n_R} \\left ( \\sum_{i \\in I_R} y_i \\right )^2 - \\left ( \\sum_{i \\in I} y_i^2 - \\frac{1}{n} \\left ( \\sum_{i \\in I} y_i \\right )^2 \\right ) $$\n",
     "\n",
     "Since $I = I_L \\cup I_R$ the $\\sum y^2$ terms cancel and we can simplify.\n",
     "\n",
