--- a/_notebooks/2021-12-12-consider-the-decision-tree.ipynb
+++ b/_notebooks/2021-12-12-consider-the-decision-tree.ipynb
@@ -33,11 +33,8 @@
     "Trees aren't particularly powerful learning algorithms on their own, but when utilized as building blocks in larger ensemble models like random forest and gradient boosted trees, they can achieve state of the art performance in many practical applications.\n",
     "So since we've been focusing on gradient boosted trees lately, I think it's high time for us to take a moment to recognize the unsung hero upon which our favorite tree ensemble method is typically based.\n",
     "\n",
-    "In this post we'll cover:\n",
-    "- what decision trees are and see one in action\n",
-    "- why trees are awesome\n",
-    "- when trees are not so awesome\n",
-    "- how ensembling can magnify trees' strengths and mitigate their weaknesses.\n",
+    "This is the first post in a two-part series on decision trees. This post will stay at a high level, giving some context and motivation, showing a tree in action, highlighting the key advantages and disadvantages, and getting a sense for how ensembling can mitigate the drawbacks and amplify the strengths.\n",
+    "We'll save the gorey details of how trees work for the [next post](https://blog.mattbowers.dev/decision-tree-from-scratch) where we implement one from scratch.\n",
     "\n",
     "Onward!"
    ]
@@ -341,11 +338,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How trees are awesome\n",
+    "## Why trees are awesome\n",
     "Trees are awesome because they are easy to use, and trees are easy to use because they are  robust, require minimal data preprocessing, and can learn complex relationships without user intervention.\n",
     "\n",
     "### Feature Scaling\n",
-    "Trees owe their minimal data preprocessing requirements and their robustness to the fact that split finding is controlled by the sort order of the input feature, rather than its actual values.\n",
+    "Trees owe their minimal data preprocessing requirements and their robustness to the fact that split finding is controlled by the sort order of the input feature values, rather than the values themselves.\n",
     "This means that trees are invariant to the scaling of input features, which in turn means that we don't need to fuss around with carefully rescaling all the numeric features before fitting a tree.\n",
     "It also means that trees tend to work well even if features are highly skewed or contain outliers."
    ]
@@ -587,7 +584,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
