Link other post.

--- a/_notebooks/2021-12-13-decision-tree-from-scratch.ipynb
+++ b/_notebooks/2021-12-13-decision-tree-from-scratch.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I hope you enjoyed yesterday's hand-wavy discussion about  the key strengths and weaknesses of decision trees and why tree ensembles are  such a good idea. \n",
+    "I hope you enjoyed yesterday's [post](https://blog.mattbowers.dev/consider-the-decision-tree), a hand-wavy discussion about  the key strengths and weaknesses of decision trees and why tree ensembles are  such a good idea. \n",
     "But today, gentle reader, we abandon our high-level fluffy philosophizing and get down to the business of implementing one of these decision trees from scratch.\n",
     "\n",
     "A note before we get started. This is going to be the most involved scratch-build that we've done at Random Realizations so far. It is not the kind of algorithm that I could just sit down and write all at once. We need to start with a basic frame and then add functionality step by step, testing all along the way to make sure things are working properly. Since I'm writing this in a jupyter notebook, I'll try to give you a sense for how I actually put the algorithm together interactively in pieces, eventually landing on a fully-functional final product. \n",
