Explicitly use description field.

--- a/_notebooks/2021-12-13-decision-tree-from-scratch.ipynb
+++ b/_notebooks/2021-12-13-decision-tree-from-scratch.ipynb
@@ -5,9 +5,8 @@
    "metadata": {},
    "source": [
     "# Decision Tree From Scratch\n",
-    "> A detailed walkthrough of my from-scratch decision tree implementation in python.\n",
     "\n",
-    "- excerpt: A detailed walkthrough of my from-scratch decision tree implementation in python.\n",
+    "- description: A detailed walkthrough of my from-scratch decision tree implementation in python.\n",
     "- author: Matt Bowers\n",
     "- toc: false\n",
     "- badges: true\n",
