Add excerpt to post frontmatter for feed.

--- a/_notebooks/2021-12-13-decision-tree-from-scratch.ipynb
+++ b/_notebooks/2021-12-13-decision-tree-from-scratch.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "# Decision Tree From Scratch\n",
+    "> A detailed walkthrough of my from-scratch decision tree implementation in python.\n",
     "\n",
-    "- description: A detailed walkthrough of my from-scratch decision tree implementation in python.\n",
-    "- author: Matt Bowers\n",
+    "- excerpt: A detailed walkthrough of my from-scratch decision tree implementation in python.\n",
     "- toc: false\n",
     "- badges: true\n",
     "- comments: true\n",
