--- a/_notebooks/2021-04-27-how-gradient-boosting-does-gradient-descent.ipynb
+++ b/_notebooks/2021-04-27-how-gradient-boosting-does-gradient-descent.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "In the last two posts, we learned the basics of [gradient boosting machines](https://blog.mattbowers.dev/gradient-boosting-machine-from-scratch) and the [gradient descent algorithm](https://blog.mattbowers.dev/get-down-with-gradient-descent).  But we still haven't explicitly addressed what puts the \"gradient\" in gradient boosting. It turns out that gradient boosting models are using a sort of gradient descent to minimize their loss function; according to [Friedman's classic paper](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf),  they're doing gradient descent in \"function space\". If you're like me, and this is your first encounter with this idea, then the phrase \"gradient descent in function space\" is going to sound a little, ahem, mysterious. No worries, friends; we're about to make sense of it all.\n",
+    "In the last two posts, we learned the basics of [gradient boosting machines]({% post_url 2020-12-08-gradient-boosting-machine-from-scratch %}) and the [gradient descent algorithm]({% post_url 2021-01-22-get-down-with-gradient-descent %}).  But we still haven't explicitly addressed what puts the \"gradient\" in gradient boosting. It turns out that gradient boosting models are using a sort of gradient descent to minimize their loss function; according to [Friedman's classic paper](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf),  they're doing gradient descent in \"function space\". If you're like me, and this is your first encounter with this idea, then the phrase \"gradient descent in function space\" is going to sound a little, ahem, mysterious. No worries, friends; we're about to make sense of it all.\n",
     "\n",
     "Understanding the underlying mechanics of gradient boosting as a form of gradient descent will empower us to train our models with custom loss functions. This opens up many interesting possibilities including doing not only regression and classification, but also predicting quantiles, prediction intervals, and even the conditional probability distribution of the response variable.\n"
    ]
@@ -45,7 +45,7 @@
    "source": [
     "## Generalized intuition for gradient boosting\n",
     "\n",
-    "In my earlier post on [building a gradient boosting model from scratch](https://blog.mattbowers.dev/gradient-boosting-machine-from-scratch), we established the intuition for how gradient boosting works in a regression problem. In this post we're going to generalize the ideas we encountered in the regression context, so check out the earlier post if you're not already familiar with gradient boosting for regression. In the following sections we'll build up the intuition for gradient boosting in general terms, and then we'll be able to state the gradient boosting algorithm in a form that can fit models to customized loss functions.\n"
+    "In my earlier post on [building a gradient boosting model from scratch]({% post_url 2020-12-08-gradient-boosting-machine-from-scratch %}), we established the intuition for how gradient boosting works in a regression problem. In this post we're going to generalize the ideas we encountered in the regression context, so check out the earlier post if you're not already familiar with gradient boosting for regression. In the following sections we'll build up the intuition for gradient boosting in general terms, and then we'll be able to state the gradient boosting algorithm in a form that can fit models to customized loss functions.\n"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "source": [
     "## Wait, in what sense is this doing gradient descent?\n",
     "\n",
-    "In my [previous post](https://blog.mattbowers.dev/get-down-with-gradient-descent), we learned how to use gradient descent to iteratively update model parameters to find a model that minimizes the loss function. We could write the update rule as\n",
+    "In my [previous post]({% post_url 2021-01-22-get-down-with-gradient-descent %}), we learned how to use gradient descent to iteratively update model parameters to find a model that minimizes the loss function. We could write the update rule as\n",
     "\n",
     "$$ \\mathbf{\\theta}_{t+1} = \\mathbf{\\theta}_{t} + \\eta ( - \\nabla_{\\mathbf{\\theta}} L(\\mathbf{y}, \\mathbf{\\hat{y}}_{\\mathbf{\\theta}_{t}}) ) $$\n",
     "\n",
@@ -194,7 +194,7 @@
    "source": [
     "## So why did we fit the crappy models to the residuals in our regression GBM?\n",
     "\n",
-    "In my first post on [gradient boosting machines](https://blog.mattbowers.dev/gradient-boosting-machine-from-scratch), in the interest of simplicity I left one key aspect of the problem unaddressed, that is, what loss function were we using to train that GBM?  It turns out that because of the way we built our GBM, without knowing it we were actually using a mean squared error (MSE) loss function.\n",
+    "In my first post on [gradient boosting machines]({% post_url 2020-12-08-gradient-boosting-machine-from-scratch %}), in the interest of simplicity I left one key aspect of the problem unaddressed, that is, what loss function were we using to train that GBM?  It turns out that because of the way we built our GBM, without knowing it we were actually using a mean squared error (MSE) loss function.\n",
     "\n",
     "$$L(\\mathbf{y}, \\hat{\\mathbf{y}}) =  \\frac{1}{n} \\sum_{i=1}^{n} (y_i - \\hat{y}_i)^2 $$\n",
     "\n",
