Add post content.

--- a/_notebooks/2022-03-13-understanding-xgboost.ipynb
+++ b/_notebooks/2022-03-13-understanding-xgboost.ipynb
@@ -13,14 +13,14 @@
     "- comments: true\n",
     "- categories: [gradient boosting]\n",
     "- hide: false\n",
-    "- image: images/20211213_thumbnail.png\n"
+    "- image: images/20220313_thumbnail.jpg\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](nb_images/20211213_thumbnail.png \"\")"
+    "![](nb_images/20220313_thumbnail.jpg \"The gym at Playa Mal País\")"
    ]
   },
   {
