--- a/_notebooks/2022-03-13-how-to-understand-xgboost.ipynb
+++ b/_notebooks/2022-03-13-how-to-understand-xgboost.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Understanding XGBoost\n",
-    "> A walkthrough and mathematical derivation of the statistical learning components in XGBoost\n",
+    "# How to Understand XGBoost\n",
+    "> In-depth intuition and mathematical derivation of the XGBoost algorithm\n",
     "\n",
-    "- excerpt: A walkthrough and mathematical derivation of the statistical learning components in XGBoost\n",
+    "- excerpt: In-depth intuition and mathematical derivation of the XGBoost algorithm\n",
     "- toc: false\n",
     "- badges: true\n",
     "- comments: true\n",
@@ -20,18 +20,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](nb_images/20220313_thumbnail.jpg \"The gym at Playa Mal País\")"
+    "![](nb_images/20220313_thumbnail.jpg \"Tree branches on a chilly day in Johnson City, TN\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahh, XGBoost, it's the gold standard in today's gradient boosting model landscape. After being introduced in the mid 2010's, this algorithm quickly won favor among ML practitioners because of its state-of-the-art accuracy on many learning tasks and its emphasis on scalability.\n",
-    "At its core, XGBoost is simply a very good implementation of gradient boosting that introduces statistical learning improvements and a design focused on efficient, distributed computation.\n",
-    "In this post we're going to focus on the statistical learning innovations, outlining the key differences from the classic gradient boosting machine and divinginto the mathematical derivation of the XGBoost learning algorithm.\n",
+    "Ahh, XGBoost, what an absolutely stellar implementation of gradient boosting. Once Tianqi Chen and Carlos Guestrin of the University of Washington published the [XGBoost paper](https://www.kdd.org/kdd2016/papers/files/rfp0697-chenAemb.pdf) and shared the [open source code](https://github.com/dmlc/xgboost) in the mid 2010's, the algorithm quickly gained adoption in the ML community, appearing in over half of winning Kagle submissions in 2015.\n",
+    "Nowadays it's certainly among the most popular gradient boosting libraries, along with LightGBM and CatBoost, although the highly scientific indicator of [GitHub stars per year](https://www.githubcompare.com/dmlc/xgboost+microsoft/lightgbm+catboost/catboost) indicates that it is in fact the most beloved gradient boosting package of all. Since it was the first of the modern popular boosting frameworks, and since [benchmarking](https://blog.dataiku.com/the-many-flavors-of-gradient-boosting-algorithms) indicates that no other boosting algorithm outperforms it, we can comfortably focus our attention on understanding XGBoost.\n",
     "\n",
-    "Buckle up, dear reader. Today we finally find out how this ML superstar actually works.\n"
+    "The XGBoost authors identify two key aspects of a machine learning system: (1) a flexible statistical model and (2) a scalable learning system to fit that model using data. XGBoost improves on both of these aspects, providing a more flexible and feature-rich statistical model and building a truly scalable system to fit it.\n",
+    "In this post we're going to focus on the statistical modeling innovations, outlining the key differences from the classic gradient boosting machine and divinginto the mathematical derivation of the XGBoost learning algorithm. If you're not already familiar with [gradient boosting]({% post_url 2020-12-08-gradient-boosting-machine-from-scratch %}), go back and read the earlier posts in the series before jumping in here.\n",
+    "\n",
+    "Buckle up, dear reader. Today we understand how XGBoost works, no hand waving required.\n"
    ]
   },
   {
